--- a/G0_Introducción_Python.ipynb
+++ b/G0_Introducción_Python.ipynb
@@ -20,18 +20,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "4\n",
-            "El número ingresado es positivo!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "try:\n",
         "    num = int(input('Ingrese un número: '))\n",
@@ -65,7 +56,14 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "try:\n",
+        "    num = int(input('Ingrese un número: '))\n",
+        "    print(num)\n",
+        "    if num % 2 == 0: print('El número ingresado es par!')\n",
+        "    else: print('El número ingresado es impar!')\n",
+        "except: print('Error: no inserto un número')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -83,6 +81,21 @@
       },
       "source": [
         "Escribe un código que, mediante un ciclo *while*, sume los primeros $100$ números naturales."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cont = 1\n",
+        "suma = 0\n",
+        "while cont < 101:\n",
+        "    print(f'{suma} + {cont} = ',end='')\n",
+        "    suma += cont\n",
+        "    cont += 1\n",
+        "    print(suma)"
       ]
     },
     {
@@ -107,6 +120,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "contraseña = 'Hola123'\n",
+        "while True:\n",
+        "    resp = input('Ingrese su contraseña: ')\n",
+        "    if resp == contraseña:\n",
+        "        print('Ingreso correctamente la contraseña!')\n",
+        "        break\n",
+        "    elif resp != contraseña: print('Contraseña incorrecta, intente de nuevo.')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "bXAO6t1V1psK"
@@ -122,6 +150,23 @@
       },
       "source": [
         "Escribe un código que, utilizando un ciclo *for*, pida al usuario ingresar un número entero y muestre la tabla de multiplicar desde el 1 al 12 de dicho número."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "while True:\n",
+        "    try:\n",
+        "        num = int(input('Ingrese un número'))\n",
+        "        break\n",
+        "    except:\n",
+        "        print('No ingreso un número, intente de nuevo.')\n",
+        "    \n",
+        "for ind in range(0,12):\n",
+        "    print(f'{num} * {ind + 1} = {num * (ind + 1)}')"
       ]
     },
     {
@@ -269,7 +314,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
