--- a/Guía_de_laboratorio_N°2_Función_lineal.ipynb
+++ b/Guía_de_laboratorio_N°2_Función_lineal.ipynb
@@ -41,7 +41,74 @@
       "source": [
         "### 1.Definir variables\n",
         "1. Variable dependiente: tiempo de ejecución\n",
-        "2. Variable independiente: cantidad"
+        "2. Variable independiente: cantidad de elementos"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2.Encontrar la función"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "elementos = np.array([100,200,500,1000,2000])\n",
+        "tiempo = np.array([2,4,10,20,40])\n",
+        "\n",
+        "pendiente, interceptacion = np.polyfit(elementos, tiempo,1)\n",
+        "\n",
+        "print(round(pendiente,2))\n",
+        "print(round(interceptacion,2))\n",
+        "\n",
+        "def f(x):\n",
+        "    return pendiente * x + interceptacion"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.Calcula el tiempo con una entrada de 1.500 elementos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(f'1.500 elementos se demora {f(1500)} ms.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4.¿Cuantos elementos se procesan en 50 milisegundos?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from scipy.optimize import fsolve\n",
+        "\n",
+        "def f(x):\n",
+        "    return pendiente * x + interceptacion - 50\n",
+        "\n",
+        "x = np.linspace(0,2001,1)\n",
+        "solucion = fsolve(f,x)\n",
+        "\n",
+        "print(f'Se pueden procesar {int(round(solucion[0],0))} elementos en 50 milisegundos.')"
       ]
     },
     {
@@ -79,6 +146,56 @@
         "4. ¿Cuánto tiempo toma una transferencia de $73,2$ GB?\n",
         "5. Utiliza la función *fsolve* de *Scipy* para determinar la cantidad de datos que se puedan transferir en $123,5$ minutos.\n",
         "6. Grafica la función $T(x)$ indicando el nombre de los ejes y su unidad de medida. Interpreta lo observado. *Para graficar utiliza la biblioteca Matplotlib.*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1.Definir variables.\n",
+        "1. Variable independiente: Datos tranferidos(gb)\n",
+        "2. Variable dependiente: Tiempo de transferencia (minutos)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2.Encontrar la función."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "datos = np.array([5,10,25,50,100])\n",
+        "tiempo = np.array([10,20,50,100,200])\n",
+        "\n",
+        "pendiente,intersecionY = np.polyfit(datos,tiempo,1)\n",
+        "\n",
+        "def T(x):\n",
+        "    return pendiente*x + intersecionY"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.Interpretar la pendiente."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(f'La pendiente de la función es {int(round(pendiente,0))}')\n",
+        "print(f'La interseción en el eje Y de la función es {int(round(intersecionY,0))}')"
       ]
     },
     {
@@ -363,7 +480,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.11.1"
     }
   },
