--- a/Guía_de_laboratorio_N°1_Funciones_y_sus_representaciones.ipynb
+++ b/Guía_de_laboratorio_N°1_Funciones_y_sus_representaciones.ipynb
@@ -477,7 +477,7 @@
       "source": [
         "import math\n",
         "import matplotlib.pyplot as plt\n",
-        "#from spicy.optimize import fsolve\n",
+        "from spicy.\n",
         "import numpy as np\n",
         "def U(t):\n",
         "    return 1000 / (1 + 9 * math.e ** (-0.5 * t))\n",
@@ -626,7 +626,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
