--- a/Guía_de_laboratorio_N°2_Función_lineal.ipynb
+++ b/Guía_de_laboratorio_N°2_Función_lineal.ipynb
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -177,7 +177,7 @@
         "\n",
         "pendiente,intersecionY = np.polyfit(datos,tiempo,1)\n",
         "\n",
-        "def T(x):\n",
+        "def T(x:int):\n",
         "    return pendiente*x + intersecionY"
       ]
     },
@@ -185,7 +185,16 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 3.Interpretar la pendiente."
+        "### 3.Interpretar la pendiente.\n",
+        "\n",
+        "La pendiente de la función es 2, lo cual, hace que por cada espacio en el eje x que aumenta, sube 2 espacios en el eje y."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4.¿Cuánto tiempo toma una transferencia de $73,2$ GB?"
       ]
     },
     {
@@ -194,8 +203,54 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "print(f'La pendiente de la función es {int(round(pendiente,0))}')\n",
-        "print(f'La interseción en el eje Y de la función es {int(round(intersecionY,0))}')"
+        "print(f\"Una transferencia de 73.2 gb se demora {T(73.2)} minutos.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.Determina la cantidad de datos que se pueden transferir en $123,5$ minutos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from scipy.optimize import fsolve\n",
+        "\n",
+        "def calular_datos(x):\n",
+        "    return pendiente*x + intersecionY - 123.5\n",
+        "\n",
+        "solucion = fsolve(calular_datos,datos)\n",
+        "print(f\"{solucion[0]} gb se pueden transferir en 123.5 minutos\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6.Graficar función"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.plot(datos,tiempo)\n",
+        "plt.axis([0,100,0,200])\n",
+        "\n",
+        "plt.title(\"Cantidad de tiempo que se demoran en tranferir datos según la cantidad de gb\")\n",
+        "plt.xlabel(\"Cantidad de datos(gigabytes)\")\n",
+        "plt.ylabel(\"Cantidad de tiempo(minutos)\")\n",
+        "plt.grid(True)\n",
+        "plt.show()"
       ]
     },
     {
@@ -489,7 +544,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.1"
+      "version": "3.12.3"
     }
   },
   "nbformat": 4,
