-desarrollo de actividades

--- a/Guía_de_laboratorio_N°2_Función_lineal.ipynb
+++ b/Guía_de_laboratorio_N°2_Función_lineal.ipynb
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -187,7 +187,7 @@
       "source": [
         "### 3.Interpretar la pendiente.\n",
         "\n",
-        "La pendiente de la función es 2, lo cual, hace que por cada espacio en el eje x que aumenta, sube 2 espacios en el eje y."
+        "La pendiente de la función es 2, lo cual, hace que por cada gb de datos, se suman 2 minutos del tiempo de transferencia."
       ]
     },
     {
@@ -292,6 +292,139 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1.Encontrar funciones."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tamanio_archivo = np.array([50,100,250,500,1000])\n",
+        "tiempo_carga = np.array([10,20,50,100,200])\n",
+        "tiempo_descarga = np.array([8,16,40,80,160])\n",
+        "\n",
+        "pendiente_carga,intersecionY_carga = np.polyfit(tamanio_archivo,tiempo_carga,1)\n",
+        "\n",
+        "pendiente_descarga,intersecionY_descarga = np.polyfit(tamanio_archivo,tiempo_descarga,1)\n",
+        "\n",
+        "def f(x):\n",
+        "    '''Función del tiempo de carga'''\n",
+        "    return pendiente_carga * x + intersecionY_carga\n",
+        "\n",
+        "def g(x):\n",
+        "    '''Función del tiempo de descarga'''\n",
+        "    return pendiente_descarga * x +intersecionY_descarga"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2.Definir variables.\n",
+        "1. f(x):\n",
+        "    1. Variable independiente: tamaño de archivo (mb)\n",
+        "    2. Variable dependiente: tiempo de carga (s)\n",
+        "2. g(x):\n",
+        "    1. Variable independiente: tamaño de archivo (mb)\n",
+        "    2. Variable dependiente: tiempo de descarga (s)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.Calcular tiempo de carga y descarga de un archivo de 750 mb."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(f'El tiempo de carga de un archivo de 750 mb es de {int(round(f(750),0))} segundos.')\n",
+        "print(f'Mientras que el tiempo de descarga del archivo es de {int(round(g(750),0))} segundos.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4.Si el tiempo de carga es de 163 segundos,¿de cuantos mb sera el archivo?."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def solucion_f(x):\n",
+        "    return f(x) - 163\n",
+        "\n",
+        "mb = fsolve(solucion_f,tamanio_archivo)\n",
+        "print(f'Si su tiempo de carga es 163, el archivo seria de {mb[0]} mb.')\n",
+        "#print(f(814.9999999999995))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.Un trabajador insiste en que si el tiempo de descarga es de 195 segundos, el tamaño del archivo es 1.200 MB. ¿Tiene razón?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def solucion_g(x):\n",
+        "    return g(x) - 195\n",
+        "\n",
+        "mb = fsolve(solucion_g,tamanio_archivo)\n",
+        "print(f'Si su tiempo de descarga es 195, el archivo seria de {mb[0]} mb.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El trabajador no tiene razón, porque son más de 1200 mb "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6.Grafica ambas funciones en el mismo gráfico."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(tamanio_archivo,tiempo_carga,label=\"Tiempo de carga\")\n",
+        "plt.plot(tamanio_archivo,tiempo_descarga,label=\"Tiempo de descarga\")\n",
+        "plt.axis([50,1000,0,200])\n",
+        "\n",
+        "plt.title(\"Tiempo de carga y descarga según el tamaño del archivo\")\n",
+        "plt.xlabel(\"Tamaño del archivo (gigabytes)\")\n",
+        "plt.ylabel(\"Tiempo transcurrido (segundos)\")\n",
+        "plt.grid(True)\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "fWF4ozV181nf"
       },
@@ -315,6 +448,78 @@
         "4. ¿Cuánta memoria del servidor está en uso cuando hay $637$ usuarios activos?\n",
         "5. Utiliza *Python* para determinar cuántos usuarios activos provocan un uso de memoria de $32$ GB.\n",
         "6. ¿Es posible un uso de memoria de $59,8$ GB?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1.Determinar variables.\n",
+        "1. Variable independiente: número de usuarios activos\n",
+        "2. Variable dependiente: uso de memoria (gb)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2.Identifica e interpreta la pendiente de la función.\n",
+        "La pendiente de la función es de 0.5, por lo cual, por cada usuario activo, se consumen 0,5 gb de memoria del servidor."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.¿Cuánta memoria del servidor está en uso cuando no hay usuarios activos?\n",
+        "2, ya que, aunque no hay usuarios que consuman memoria del servidor, siempre se ocupan 2 gb de memoria extra."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4.¿Cuánta memoria del servidor está en uso cuando hay 637 usuarios activos?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def M(x):\n",
+        "    '''Función del uso de memoria'''\n",
+        "    return 0.5 * x + 2\n",
+        "print(f'Si hay 637 usuarios activos, se consumen {M(637)} gb de memoria.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5.¿Cuántos usuarios activos provocan un uso de memoria de $32$ GB?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def solucion_M(x):\n",
+        "    return M(x) - 32\n",
+        "usuarios = np.arange(0,1000,1)\n",
+        "gb = fsolve(solucion_M,usuarios)\n",
+        "print(f'Tienen que haber {int(gb[0])} usuarios para utilizar 32 gb de memoria del servidor.')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6.¿Es posible un uso de memoria de $59,8$ GB?\n",
+        "No, porque el uso de memoria aumenta en 0.5 cada vez, por lo cual, es imposible que haya un uso de 59,8 gb. "
       ]
     },
     {
@@ -544,7 +749,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.3"
+      "version": "3.11.1"
     }
   },
   "nbformat": 4,
