desarrollo ejercicio 5, sin completar

--- a/Guía_de_laboratorio_N°2_Función_lineal.ipynb
+++ b/Guía_de_laboratorio_N°2_Función_lineal.ipynb
@@ -550,6 +550,45 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1.Determinar variables.\n",
+        "1. Variable independiente: número de sevidores\n",
+        "2. Variable dependiente: costo de operación mensual(miles de dolares)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2.¿Qué representa la pendiente en el contexto del problema?\n",
+        "La pendiente representa el costo por servidor."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3.¿Qué representa el intercepto en el contexto del problema?\n",
+        "El intercepto representa el costo fijo mensual sin importar cuantos servidores haya."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4.Calcula el costo de operación cuando hay $47$ servidores."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "3yDEREQT5v2c"
       },
