--- a/G4_Sucesiones.ipynb
+++ b/G4_Sucesiones.ipynb
@@ -13,8 +13,14 @@
         "\n",
         "a1 = 0\n",
         "d = 0\n",
-        "def A(n):\n",
-        "    return a1 + (n - 1) * d"
+        "def Aa(n):\n",
+        "    '''Succeción aritmetica'''\n",
+        "    return a1 + (n - 1) * d\n",
+        "\n",
+        "r = 0\n",
+        "def Ag(n):\n",
+        "    '''Succeción geometrica'''\n",
+        "    return a1 * (r**(n - 1))"
       ]
     },
     {
@@ -168,7 +174,7 @@
         "a1 = 12000\n",
         "d = 2000\n",
         "\n",
-        "resultados = [A(n) for n in range(25)]\n",
+        "resultados = [Aa(n) for n in range(25)]\n",
         "\n",
         "print(resultados[14])\n",
         "print(sum(resultados))"
@@ -205,7 +211,7 @@
       "source": [
         "a1 = 3\n",
         "d = -0.1\n",
-        "resultados = [A(n) for n in range(11)]\n",
+        "resultados = [Aa(n) for n in range(11)]\n",
         "#A)\n",
         "print(resultados[5])\n",
         "#B)\n",
@@ -250,7 +256,8 @@
       "source": [
         "def A1(x):\n",
         "    return (x + (10 - 1) * d) - (-20)\n",
-        "x = np.arange(0,10,4)\n",
+        "d = 4\n",
+        "x = np.linspace(1,10,1)\n",
         "a1 = round(np.unique(fsolve(A1,x))[0])\n",
         "print(a1)"
       ]
@@ -283,8 +290,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "d = 4\n",
-        "resultados = [A(n) for n in range(436)]\n",
+        "resultados = [Aa(n) for n in range(436)]\n",
         "print(resultados[100])"
       ]
     },
@@ -309,7 +315,7 @@
       "outputs": [],
       "source": [
         "def Ax(x):\n",
-        "    return A(x) - 1680\n",
+        "    return Aa(x) - 1680\n",
         "solucion = round(np.unique(fsolve(Ax,x))[0])\n",
         "print(solucion)\n",
         "print(resultados[solucion])"
@@ -343,7 +349,100 @@
         "2. El primer término de la sucesión.\n",
         "3. La expresión del término de lugar $n$.\n",
         "4. Utilice un código en *Python* para calcular el término que ocupa el lugar $8$.\n",
-        "4. ¿Qué lugar ocupa en esta sucesión el término $20.480$? Calcule utilizando un ciclo *while*."
+        "5. ¿Qué lugar ocupa en esta sucesión el término $20.480$? Calcule utilizando un ciclo *while*."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. La razón geométrica de la sucesión."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "r = 2"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La razón geométrica es 2."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. El primer término de la sucesión."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def A1(x):\n",
+        "    return (x * (r**(3 - 1))) - 5\n",
+        "a1 = np.unique(fsolve(A1,x))[0]\n",
+        "print(a1)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El primer termino de la sucesión es 1.25."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. La expresión del término de lugar $n$."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "La expresión es $A_{n} = 1.25(2^{n-1})$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 4. Utilice un código en *Python* para calcular el término que ocupa el lugar $8$."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "print(Ag(8))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El término de la octava posición es 160"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 5. ¿Qué lugar ocupa en esta sucesión el término $20.480$?"
       ]
     },
     {
@@ -450,7 +549,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "print(A(31))"
+        "print(Aa(31))"
       ]
     },
     {
@@ -474,10 +573,10 @@
       "outputs": [],
       "source": [
         "def Ax(x):\n",
-        "    return A(x) - 5505\n",
+        "    return Aa(x) - 5505\n",
         "solucion = round(np.unique(fsolve(Ax,x))[0])\n",
         "print(solucion)\n",
-        "print(A(38))\n",
+        "print(Aa(38))\n",
         "print(round(1+7/31,2))"
       ]
     },
@@ -528,6 +627,57 @@
         "\n",
         "1. ¿A cuántos trabajadores capacitarán en el octavo trimestre?\n",
         "2. Si la empresa lleva en el mercado $3$ años, ¿a cuántos trabajadores han capacitado en total?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. ¿A cuántos trabajadores capacitarán en el octavo trimestre?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 159,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3840\n"
+          ]
+        }
+      ],
+      "source": [
+        "r = 2\n",
+        "a1 = 30\n",
+        "print(Ag(8))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Si la empresa lleva en el mercado $3$ años, ¿a cuántos trabajadores han capacitado en total?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 162,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "122850\n"
+          ]
+        }
+      ],
+      "source": [
+        "resultados = [Ag(n) for n in range(1,13)]\n",
+        "print(sum(resultados))"
       ]
     },
     {
