Falta_desarrollar_problema_12

--- a/G4_Sucesiones.ipynb
+++ b/G4_Sucesiones.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -20,7 +20,9 @@
         "r = 0\n",
         "def Ag(n):\n",
         "    '''Succeción geometrica'''\n",
-        "    return a1 * (r**(n - 1))"
+        "    return a1 * (r**(n - 1))\n",
+        "\n",
+        "x = np.linspace(1,10,1)"
       ]
     },
     {
@@ -45,6 +47,88 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def problema1_A(n):\n",
+        "    return (3 * (n ** 2)) + 7"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Los primeros $5$ términos."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[10, 19, 34, 55, 82]\n"
+          ]
+        }
+      ],
+      "source": [
+        "resultados = [problema1_A(n) for n in range(1,6)]\n",
+        "print(resultados)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. termino = 10\n",
+        "2. termino = 19\n",
+        "3. termino = 34\n",
+        "4. termino = 55\n",
+        "5. termino = 82"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Los $5$ términos que vienen inmediatamente después del decimoquinto término."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[775, 874, 979, 1090, 1207]\n"
+          ]
+        }
+      ],
+      "source": [
+        "resultados = [problema1_A(n) for n in range(16,21)]\n",
+        "print(resultados)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "16. termino = 775\n",
+        "17. termino = 874\n",
+        "18. termino = 979\n",
+        "19. termino = 1090\n",
+        "20. termino = 1207"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MpHLoYWfk97E"
@@ -64,6 +148,120 @@
         "1. Los primeros $4$ términos de la sucesión.\n",
         "2. Los $4$ términos que vienen inmediatamente después del octavo término.\n",
         "3. Determinar si el término $40.000$ pertenece a la sucesión. Si es así, indicar en qué posición se encuentra."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def problema2_G(n):\n",
+        "    return 5 * (n ** 3)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Los primeros $4$ términos de la sucesión."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[5, 40, 135, 320]\n"
+          ]
+        }
+      ],
+      "source": [
+        "resultados = [problema2_G(n) for n in range(1,5)]\n",
+        "print(resultados)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "1. termino = 5\n",
+        "2. termino = 40\n",
+        "3. termino = 135\n",
+        "4. termino = 320"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Los $4$ términos que vienen inmediatamente después del octavo término."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[3645, 5000, 6655, 8640]\n"
+          ]
+        }
+      ],
+      "source": [
+        "resultados = [problema2_G(n) for n in range(9,13)]\n",
+        "print(resultados)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "9. termino = 3645\n",
+        "10. termino = 5000\n",
+        "11. termino = 6655\n",
+        "12. termino = 8640"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 3. Determinar si el término $40.000$ pertenece a la sucesión. Si es así, indicar en qué posición se encuentra."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 79,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[20.] 40000\n"
+          ]
+        }
+      ],
+      "source": [
+        "def problema2_buscar_(n):\n",
+        "    return problema2_G(n) - 40000\n",
+        "solucion = fsolve(problema2_buscar_,x)\n",
+        "print(solucion,problema2_G(20))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El termino = 40.000 si pertenece a la sucesión, en la posición 20."
       ]
     },
     {
@@ -97,6 +295,20 @@
         "\n",
         "1. Implementa un código en *Python* que muestre en pantalla los primeros $20$ términos de la sucesión.\n",
         "2. Calcula, utilizando un ciclo *for*, la suma de los primeros $30$ términos de la sucesión de Fibonacci."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Implementa un código en *Python* que muestre en pantalla los primeros $20$ términos de la sucesión."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Calcula, utilizando un ciclo *for*, la suma de los primeros $30$ términos de la sucesión de Fibonacci."
       ]
     },
     {
@@ -167,9 +379,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "38000\n",
+            "850000\n"
+          ]
+        }
+      ],
       "source": [
         "a1 = 12000\n",
         "d = 2000\n",
@@ -205,9 +426,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2.6\n",
+            "28.6\n"
+          ]
+        }
+      ],
       "source": [
         "a1 = 3\n",
         "d = -0.1\n",
@@ -250,14 +480,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-56\n"
+          ]
+        }
+      ],
       "source": [
         "def A1(x):\n",
         "    return (x + (10 - 1) * d) - (-20)\n",
         "d = 4\n",
-        "x = np.linspace(1,10,1)\n",
         "a1 = round(np.unique(fsolve(A1,x))[0])\n",
         "print(a1)"
       ]
@@ -286,9 +523,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 64,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "340\n"
+          ]
+        }
+      ],
       "source": [
         "resultados = [Aa(n) for n in range(436)]\n",
         "print(resultados[100])"
@@ -310,9 +555,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 65,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "435\n",
+            "1680\n"
+          ]
+        }
+      ],
       "source": [
         "def Ax(x):\n",
         "    return Aa(x) - 1680\n",
@@ -361,7 +615,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -384,9 +638,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1.25\n"
+          ]
+        }
+      ],
       "source": [
         "def A1(x):\n",
         "    return (x * (r**(3 - 1))) - 5\n",
@@ -424,9 +686,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "160.0\n"
+          ]
+        }
+      ],
       "source": [
         "print(Ag(8))"
       ]
@@ -500,9 +770,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "143\n"
+          ]
+        }
+      ],
       "source": [
         "def encontrar_d(d):\n",
         "    return (2 * d - 500) - (9 * d - 1501)\n",
@@ -519,9 +797,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 70,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "214\n"
+          ]
+        }
+      ],
       "source": [
         "def A1(x):\n",
         "    return (x + (3 - 1) * d) - 500\n",
@@ -545,9 +831,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4504\n"
+          ]
+        }
+      ],
       "source": [
         "print(Aa(31))"
       ]
@@ -568,9 +862,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "38\n",
+            "5505\n",
+            "1.23\n"
+          ]
+        }
+      ],
       "source": [
         "def Ax(x):\n",
         "    return Aa(x) - 5505\n",
@@ -610,6 +914,20 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. El salario aproximado que Javier recibiría en el décimo mes de trabajo en la empresa."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. ¿Cuál sería el ingreso total recibido por los sueldos de Javier durante el tercer año de trabajo?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "-lx5k4b9Y8sD"
       },
@@ -638,7 +956,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 73,
       "metadata": {},
       "outputs": [
         {
@@ -664,7 +982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 74,
       "metadata": {},
       "outputs": [
         {
@@ -705,14 +1023,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "A1 = 152\n",
+            "d = [-8.]\n"
+          ]
+        }
+      ],
       "source": [
         "def encontrar_d(d):\n",
         "    return (3*d - 128) - (8*d - 88)\n",
         "d = fsolve(encontrar_d,1)\n",
-        "print(d)"
+        "def A1(x):\n",
+        "    return (x + (4 - 1) * d) - 128\n",
+        "a1 = round(np.unique(fsolve(A1,x))[0])\n",
+        "print(f\"A1 = {a1}\\nd = {d}\")"
       ]
     },
     {
@@ -723,10 +1053,60 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 76,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[20.] [5.68434189e-14] [-8.]\n"
+          ]
+        }
+      ],
+      "source": [
+        "solucion = fsolve(Aa,x)\n",
+        "print(solucion,Aa(20),Aa(21))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El tambor dejaria de recibir agua en el minuto 20."
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
         "### 2. ¿Cuántos litros recibe en total el tambor?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[1520.]\n"
+          ]
+        }
+      ],
+      "source": [
+        "resultados = [Aa(n) for n in range(1,21)]\n",
+        "print(sum(resultados))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "El tambor recibe en total 1520 litros de agua."
       ]
     }
   ],
